fix scrollbar

--- a/client/src/components/ArchiveControls/ArchiveControls.module.css
+++ b/client/src/components/ArchiveControls/ArchiveControls.module.css
@@ -40,11 +40,7 @@
   overflow-x: auto;
   padding: 10px 0;
   -webkit-overflow-scrolling: touch;
-  scrollbar-width: none;
-}
-
-.dateScroll::-webkit-scrollbar {
-  display: none;
+  scrollbar-width: thin;
 }
 
 .dateChip {
